# bm25-spyrs

./: .gitignore  Cargo.toml  README.md  bm25.py  pyproject.toml  requirements.txt
benchmark/: benchmark.py  benchmark_bm25s.py  benchmark_bm25spyrs.py  benchmark_playbook_bm25s.sh  benchmark_playbook_bm25spyrs.sh  legacy_results_BM25s.json  legacy_results_bm25spyrs.json  plot.py  setup.py
bm25spyrs/: __init__.py  test.py
src/: bm25.rs  lib.rs  retriever.rs  tokenizer.rs
