[package]
name = "bm25spyrs"
version = "0.1.0"
edition = "2021"

[lib]
name = "bm25spyrs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
regex = "1.11.1"
stop-words = "0.8.1"
sprs = "0.11.2"
ndarray = "0.16.1"
order-stat = "0.1.3"
rust-stemmers = "1.2.0"
rayon = "1.10.0"
