[build-system]
requires = ["maturin>=1.8.1,<2.0"]
build-backend = "maturin"

[project]
name = "bm25spyrs"
version = "0.1.0"
description = "BM25 implementation in Rust with Python bindings"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]